@@ -1,3 +1,7 @@
+2007-12-14  Stéphane Raimbault  <stephane.raimbault@gmail.com>
+
+	* POTFILES.in: Updated file list (gio).
+
 2007-12-13  Matej Urbančič <mateju@svn.gnome.org>
 
 	* sl.po: Updated Slovenian Translation.
